# wordle

./: Cargo.toml  README.md  docs.html  index.html  meu_banco_de_dados.db  novaspalavras.txt
src/: db.rs  game.rs  keyboard.rs  line.rs  main.rs  service.rs  win.rs  wordbox.rs
