[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
description = "Wordle Implementation in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
rand = "0.8.5"
rusqlite = { version = "0.26.3", features = ["bundled"] }
